[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/robot/Laser.gd" type="Script" id=1]
[ext_resource path="res://assets/images/characters/robot/laser1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/characters/robot/laser2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/characters/robot/laser3.png" type="Texture" id=4]
[ext_resource path="res://assets/images/characters/robot/laser4.png" type="Texture" id=5]
[ext_resource path="res://assets/images/characters/robot/laser5.png" type="Texture" id=6]
[ext_resource path="res://assets/images/characters/robot/laser7.png" type="Texture" id=7]
[ext_resource path="res://assets/images/characters/robot/laser6.png" type="Texture" id=8]
[ext_resource path="res://assets/images/characters/robot/laser8.png" type="Texture" id=9]
[ext_resource path="res://assets/images/characters/robot/laser9.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.5, 0.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Laser" type="Area2D"]
collision_layer = 32
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 6
playing = true
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
